[package]
name = "git-workspace"
version = "1.9.0"
readme = "README.md"
repository = "https://github.com/orf/git-workspace"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2021"
description = "Manage and update personal and work git repos from multiple providers"
license = "MIT"
categories = ["development-tools"]
keywords = ["cli", "git"]
exclude = ["workspace/**", "images/**", ".github/**"]
rust-version = "1.74.1"

[dependencies]
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
rayon = "1.10.0"
graphql_client = "0.14.0"
walkdir = "2.5.0"
fs_extra = "1.3.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
console = { version = "0.15.11", features = [
    "ansi-parsing",
], default-features = false } # We don't care about unicode widths
atomic-counter = "1.0.1"
ureq = { version = "2.12.1", features = ["json", "native-certs", "brotli"] }
serde_json = "1.0.140"
globset = "0.4.16"
git2 = { version = "0.20.1" }
regex = "1.11.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
clap_complete = "4.5.46"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.19.0"
testcontainers = { version = "0.23.3", features = ["blocking"] }
testcontainers-modules = { version = "0.11.6", features = ["gitea"] }
reqwest = { version = "0.12.14", features = ["blocking", "brotli", "json"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
rand = "0.9.0"
base64 = "0.22.1"
ctor = "0.4.1"

[target."cfg(unix)".dependencies]
expanduser = "1.2.2"

[profile.release]
lto = true
codegen-units = 1
